--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="News Explorer" />
   <base href="/">
@@ -10,10 +9,10 @@
   <title>News Explorer</title>
 </head>
 
-<body>
-  <noscript style="color: #fff;">You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+<body class="body">
+  <div class="root" id="root">
 
+  </div>
 </body>
 
 </html>
